--- a/basic_carto.Rmd
+++ b/basic_carto.Rmd
@@ -1,34 +1,56 @@
+
+```{r, message=FALSE}
+# Packages we'll be using for this session
 library(rgdal)
 library(ggplot2)
-library(gridExtra)
+library(grid)
+# setwd("/Users/james/Dropbox/Abstracts_Papers_Reviews/Geocomp_Chapter")
+```
 
-setwd("/Users/james/Dropbox/Abstracts_Papers_Reviews/Geocomp_Chapter")
 
 
 # get data- map of the world
-download.file(url="http://www.naturalearthdata.com/http//www.naturalearthdata.com/download/110m/cultural/ne_110m_admin_0_countries.zip", "ne_110m_admin_0_countries.zip", "auto")
-unzip("ne_110m_admin_0_countries.zip")
+
+```{r}
+# uncomment first two lines if data not already downloaded
+# download.file(url="http://www.naturalearthdata.com/http//www.naturalearthdata.com/download/110m/cultural/ne_110m_admin_0_countries.zip", "ne_110m_admin_0_countries.zip", "auto")
+# unzip("ne_110m_admin_0_countries.zip", exdir = "data/")
 file.remove("ne_110m_admin_0_countries.zip")
+```
+
+
+
 
 # read shape file using rgdal library
 
-wrld <- readOGR(".", "ne_110m_admin_0_countries")
+```{r}
+wrld <- readOGR("data/", "ne_110m_admin_0_countries")
+```
+
+
 
 # transform this to the robinson projection- this is much better for showing  population datasets
 
-wrld.rob<-spTransform(wrld, CRS("+init=ESRI:54030"))
+```{r}
+wrld.rob<-spTransform(wrld,  CRS("+init=ESRI:54030"))
 
-wrld.rob.f<-fortify(wrld.rob, region="sov_a3")
+wrld.rob.f <- fortify(wrld, region="sov_a3")
 
-wrld.pop.f <- merge(wrld.rob.f, wrld.rob@data, by.x = "id", by.y = "sov_a3")
+wrld.pop.f <- merge(wrld.rob.f, wrld@data, by.x = "id", by.y = "sov_a3")
+```
+
+
+
 
 # continuous colour ramp
 
+```{r}
 ggplot(wrld.pop.f, aes(long, lat, group = group, fill = pop_est)) + 
   geom_polygon() + 
   coord_equal() + 
   labs(x = "Longitude", y = "Latitude", fill = "World Population") + 
   ggtitle("World Population")
+```
 
 #better colours with more breaks- to finish
 
@@ -63,7 +85,41 @@ grid.arrange(yellow, black,thick, thin, ncol=2)
 
 #Annotations
 
-#north arrow- can this be done?
+# North arrow
+
+In the maps created so far, we have defined the *aesthetics* of the map 
+in the foundation function `ggplot`. The result of this is that all subsequent
+layers are expected to have the same variables and essentially contain 
+data with the same dimensions as original dataset. But what if we want to 
+add a new layer from a completely different dataset, e.g. to add an 
+arrow? To do this, we must not add any arguments to the `ggplot` function, 
+only adding data sources one layer at a time:
+
+```{r}
+arrow<-data.frame(c(2.97,2.97,2.9,3,3.1,3.03,3.03,2.97),c(1,4,4,5.5,4,4,1,1))
+names(arrow)<- c("x", "y")
+qplot(data  = arrow, x = x, y = y) 
+qplot(data  = arrow, x = x, y = y) + geom_line()
+arrow <- arrow * 5 - 40
+
+ggplot() + 
+  geom_polygon(data = wrld.pop.f, aes(long, lat, group = group, fill = pop_est)) +
+  geom_line(data = arrow, aes(x, y))
+```
+
+Here we created an empty plot, meaning that each new layer must be given its 
+own dataset. While more code is needed in this example, it enables much 
+greater flexibility with regards to what can be included in new layer contents. 
+Another possibility is to use the `segment` geom to add a pre-made arrow:
+
+```{r}
+ggplot() + 
+  geom_polygon(data = wrld.pop.f, aes(long, lat, group = group, fill = pop_est)) +
+  geom_line(aes(x = c(-160, -160), y = c(0, 25)), arrow = arrow()) 
+```
+
+
+
 
 #scale bar- found this function
 
