--- a/brief.Rmd
+++ b/brief.Rmd
@@ -92,9 +92,9 @@ Exporting graphics for publication.
 The following can be used to compile the book into a single document:
 
 ```{r}
-system("pandoc -f markdown -t markdown introduction.md basic_carto.md R+sd.md refs.md > book.md")
-mess <- paste('pandoc -f markdown -t latex -s -o', "book.tex", 
-              "book.md")
+system("pandoc -f markdown -t markdown introduction.md basic_carto.md R+sd.md refs.md >  chapter.md")
+mess <- paste('pandoc -f markdown -t latex -s -o', "chapter.tex", 
+              "chapter.md")
 system(mess) # create latex file
 ```
 
